[gd_scene load_steps=16 format=4 uid="uid://bpdjudyw7g5yr"]

[ext_resource type="Texture2D" uid="uid://ygcf5tto41mn" path="res://TileMap/Floor.png" id="1_tgkxo"]
[ext_resource type="Script" path="res://scripts/game_mode.gd" id="1_yqtr1"]
[ext_resource type="Texture2D" uid="uid://bu7agoxmw0hwj" path="res://tiles/arrowLeft.png" id="2_r5j28"]
[ext_resource type="Texture2D" uid="uid://ilg5gtjwx7vr" path="res://tiles/barRed_horizontalMid.png" id="4_1c5yy"]

[sub_resource type="TileMapPattern" id="TileMapPattern_vcf72"]
tile_data = PackedInt32Array(0, 983041, 1, 65536, 1114113, 1, 1, 1114113, 1, 65537, 983041, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8pwlw"]
texture = ExtResource("1_tgkxo")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
5:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
12:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
12:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
5:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
5:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
12:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
19:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
5:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
12:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
19:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
5:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
5:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
5:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
5:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0

[sub_resource type="TileSet" id="TileSet_ekutk"]
physics_layer_0/collision_layer = 2
sources/1 = SubResource("TileSetAtlasSource_8pwlw")
pattern_0 = SubResource("TileMapPattern_vcf72")

[sub_resource type="Theme" id="Theme_vrqjl"]

[sub_resource type="LabelSettings" id="LabelSettings_3g8k5"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_xb34i"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_n1efm"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_kr8i3"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_h3fib"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_8y36d"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_dsk5g"]
font_size = 14

[node name="game mode" type="Node2D"]
script = ExtResource("1_yqtr1")

[node name="map" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAADAAAAAQAMAAAAAAAFAAAAAQAMAAAAAAAHAAAAAQAMAAAAAAAJAAAAAQAMAAAAAAALAAAAAQAMAAAAAAANAAAAAQAMAAAAAAAPAAAAAQAMAAAAAAARAAAAAQAMAAAAAAATAAAAAQAMAAAAAAAVAAAAAQAMAAAAAAAXAAAAAQAMAAAAAAACAAEAAQAMAAAAAAAEAAEAAQAMAAAAAAAAAAAAAQAMAAAAAAAAAAEAAQAMAAAAAAABAAAAAQAMAAAAAAABAAEAAQAMAAAAAAAAAAIAAQAMAAAAAAAAAAMAAQAKAAEAAAABAAIAAQAMAAAAAAABAAMAAQAKAAEAAAAAAAQAAQAKAAEAAAAAAAUAAQAKAAEAAAABAAQAAQARAAEAAAABAAUAAQAPAAEAAAAAAAYAAQAKAAEAAAAAAAcAAQAKAAEAAAABAAYAAQARAAEAAAABAAcAAQAPAAEAAAAAAAgAAQAKAAEAAAAAAAkAAQAKAAEAAAABAAgAAQARAAEAAAABAAkAAQAPAAEAAAAAAAoAAQAKAAEAAAAAAAsAAQAKAAEAAAABAAoAAQARAAEAAAABAAsAAQAPAAEAAAAAAAwAAQAKAAEAAAAAAA0AAQAKAAEAAAABAAwAAQARAAEAAAABAA0AAQAPAAEAAAAAAA4AAQAKAAEAAAAAAA8AAQAKAAEAAAABAA4AAQARAAEAAAABAA8AAQAPAAEAAAAAABAAAQAKAAEAAAAAABEAAQAKAAEAAAABABAAAQARAAEAAAABABEAAQAPAAEAAAAAABIAAQAKAAEAAAAAABMAAQAKAAEAAAABABIAAQARAAEAAAABABMAAQAPAAEAAAAAABQAAQAKAAEAAAAAABUAAQAKAAEAAAABABQAAQARAAEAAAABABUAAQAPAAEAAAAAABYAAQAKAAEAAAAAABcAAQAKAAEAAAABABYAAQARAAEAAAABABcAAQAPAAEAAAAAABgAAQAKAAEAAAABABgAAQAKAAEAAAACAAAAAQAMAAAAAAADAAEAAQAMAAAAAAACAAIAAQAMAAAAAAACAAMAAQAKAAEAAAADAAIAAQAMAAAAAAADAAMAAQAKAAEAAAACAAQAAQAPAAEAAAACAAUAAQARAAEAAAADAAQAAQARAAEAAAADAAUAAQAPAAEAAAACAAYAAQAPAAEAAAACAAcAAQARAAEAAAADAAYAAQARAAEAAAADAAcAAQAPAAEAAAACAAgAAQAPAAEAAAACAAkAAQARAAEAAAADAAgAAQARAAEAAAADAAkAAQAPAAEAAAACAAoAAQAPAAEAAAACAAsAAQARAAEAAAADAAoAAQARAAEAAAADAAsAAQAPAAEAAAACAAwAAQAPAAEAAAACAA0AAQARAAEAAAADAAwAAQARAAEAAAADAA0AAQAPAAEAAAACAA4AAQAPAAEAAAACAA8AAQARAAEAAAADAA4AAQARAAEAAAADAA8AAQAPAAEAAAACABAAAQAPAAEAAAACABEAAQARAAEAAAADABAAAQARAAEAAAADABEAAQAPAAEAAAACABIAAQAPAAEAAAACABMAAQARAAEAAAADABIAAQARAAEAAAADABMAAQAPAAEAAAACABQAAQAPAAEAAAACABUAAQARAAEAAAADABQAAQARAAEAAAADABUAAQAPAAEAAAACABYAAQAPAAEAAAACABcAAQARAAEAAAADABYAAQARAAEAAAADABcAAQAPAAEAAAACABgAAQAKAAEAAAADABgAAQAKAAEAAAAEAAAAAQAMAAAAAAAFAAEAAQAMAAAAAAAEAAIAAQAMAAAAAAAEAAMAAQAKAAEAAAAFAAIAAQAMAAAAAAAFAAMAAQAKAAEAAAAEAAQAAQAPAAEAAAAEAAUAAQARAAEAAAAFAAQAAQARAAEAAAAFAAUAAQAPAAEAAAAEAAYAAQAPAAEAAAAEAAcAAQARAAEAAAAFAAYAAQARAAEAAAAFAAcAAQAPAAEAAAAEAAgAAQAPAAEAAAAEAAkAAQARAAEAAAAFAAgAAQARAAEAAAAFAAkAAQAPAAEAAAAEAAoAAQAPAAEAAAAEAAsAAQARAAEAAAAFAAoAAQARAAEAAAAFAAsAAQAPAAEAAAAEAAwAAQAPAAEAAAAEAA0AAQARAAEAAAAFAAwAAQARAAEAAAAFAA0AAQAPAAEAAAAEAA4AAQAPAAEAAAAEAA8AAQARAAEAAAAFAA4AAQARAAEAAAAFAA8AAQAPAAEAAAAEABAAAQAPAAEAAAAEABEAAQARAAEAAAAFABAAAQARAAEAAAAFABEAAQAPAAEAAAAEABIAAQAPAAEAAAAEABMAAQARAAEAAAAFABIAAQARAAEAAAAFABMAAQAPAAEAAAAEABQAAQAPAAEAAAAEABUAAQARAAEAAAAFABQAAQARAAEAAAAFABUAAQAPAAEAAAAEABYAAQAPAAEAAAAEABcAAQARAAEAAAAFABYAAQARAAEAAAAFABcAAQAPAAEAAAAEABgAAQAKAAEAAAAFABgAAQAKAAEAAAAGAAAAAQAMAAAAAAAGAAEAAQAMAAAAAAAHAAEAAQAMAAAAAAAGAAIAAQAMAAAAAAAGAAMAAQAKAAEAAAAHAAIAAQAMAAAAAAAHAAMAAQAKAAEAAAAGAAQAAQAPAAEAAAAGAAUAAQARAAEAAAAHAAQAAQARAAEAAAAHAAUAAQAPAAEAAAAGAAYAAQAPAAEAAAAGAAcAAQARAAEAAAAHAAYAAQARAAEAAAAHAAcAAQAPAAEAAAAGAAgAAQAPAAEAAAAGAAkAAQARAAEAAAAHAAgAAQARAAEAAAAHAAkAAQAPAAEAAAAGAAoAAQAPAAEAAAAGAAsAAQARAAEAAAAHAAoAAQARAAEAAAAHAAsAAQAPAAEAAAAGAAwAAQAPAAEAAAAGAA0AAQARAAEAAAAHAAwAAQARAAEAAAAHAA0AAQAPAAEAAAAGAA4AAQAPAAEAAAAGAA8AAQARAAEAAAAHAA4AAQARAAEAAAAHAA8AAQAPAAEAAAAGABAAAQAPAAEAAAAGABEAAQARAAEAAAAHABAAAQARAAEAAAAHABEAAQAPAAEAAAAGABIAAQAPAAEAAAAGABMAAQARAAEAAAAHABIAAQARAAEAAAAHABMAAQAPAAEAAAAGABQAAQAPAAEAAAAGABUAAQARAAEAAAAHABQAAQARAAEAAAAHABUAAQAPAAEAAAAGABYAAQAPAAEAAAAGABcAAQARAAEAAAAHABYAAQARAAEAAAAHABcAAQAPAAEAAAAGABgAAQAKAAEAAAAHABgAAQAKAAEAAAAIAAAAAQAMAAAAAAAIAAEAAQAMAAAAAAAJAAEAAQAMAAAAAAAIAAIAAQAMAAAAAAAIAAMAAQAKAAEAAAAJAAIAAQAMAAAAAAAJAAMAAQAKAAEAAAAIAAQAAQAPAAEAAAAIAAUAAQARAAEAAAAJAAQAAQARAAEAAAAJAAUAAQAPAAEAAAAIAAYAAQAPAAEAAAAIAAcAAQARAAEAAAAJAAYAAQARAAEAAAAJAAcAAQAPAAEAAAAIAAgAAQAPAAEAAAAIAAkAAQARAAEAAAAJAAgAAQANAAEAAAAJAAkAAQANAAEAAAAIAAoAAQAPAAEAAAAIAAsAAQARAAEAAAAJAAoAAQAPAAAAAAAJAAsAAQAPAAAAAAAIAAwAAQAPAAEAAAAIAA0AAQARAAEAAAAJAAwAAQAPAAAAAAAJAA0AAQAPAAAAAAAIAA4AAQAPAAEAAAAIAA8AAQARAAEAAAAJAA4AAQAPAAAAAAAJAA8AAQAPAAAAAAAIABAAAQAPAAEAAAAIABEAAQARAAEAAAAJABAAAQAPAAAAAAAJABEAAQAPAAAAAAAIABIAAQAPAAEAAAAIABMAAQARAAEAAAAJABIAAQAPAAAAAAAJABMAAQAPAAAAAAAIABQAAQAPAAEAAAAIABUAAQARAAEAAAAJABQAAQARAAEAAAAJABUAAQAPAAEAAAAIABYAAQAPAAEAAAAIABcAAQARAAEAAAAJABYAAQARAAEAAAAJABcAAQAPAAEAAAAIABgAAQAKAAEAAAAJABgAAQAKAAEAAAAKAAAAAQAMAAAAAAAKAAEAAQAMAAAAAAALAAEAAQAMAAAAAAAKAAIAAQAMAAAAAAAKAAMAAQAKAAEAAAALAAIAAQAMAAAAAAALAAMAAQAKAAEAAAAKAAQAAQAPAAEAAAAKAAUAAQARAAEAAAALAAQAAQARAAEAAAALAAUAAQAPAAEAAAAKAAYAAQAPAAEAAAAKAAcAAQARAAEAAAALAAYAAQARAAEAAAALAAcAAQAPAAEAAAAKAAgAAQANAAEAAAAKAAkAAQANAAEAAAALAAgAAQANAAEAAAALAAkAAQANAAEAAAAKAAoAAQAPAAAAAAAKAAsAAQAPAAAAAAALAAoAAQAPAAAAAAALAAsAAQAPAAAAAAAKAAwAAQAPAAAAAAAKAA0AAQAPAAAAAAALAAwAAQAPAAAAAAALAA0AAQAPAAAAAAAKAA4AAQAPAAAAAAAKAA8AAQAPAAAAAAALAA4AAQAPAAAAAAALAA8AAQAPAAAAAAAKABAAAQAPAAAAAAAKABEAAQAPAAAAAAALABAAAQAPAAAAAAALABEAAQAPAAAAAAAKABIAAQAPAAAAAAAKABMAAQAPAAAAAAALABIAAQAPAAAAAAALABMAAQAPAAAAAAAKABQAAQAPAAEAAAAKABUAAQARAAEAAAALABQAAQARAAEAAAALABUAAQAPAAEAAAAKABYAAQAPAAEAAAAKABcAAQARAAEAAAALABYAAQARAAEAAAALABcAAQAPAAEAAAAKABgAAQAKAAEAAAALABgAAQAKAAEAAAAMAAAAAQAMAAAAAAAMAAEAAQAMAAAAAAANAAEAAQAMAAAAAAAMAAIAAQAMAAAAAAAMAAMAAQAKAAEAAAANAAIAAQAMAAAAAAANAAMAAQAKAAEAAAAMAAQAAQAPAAEAAAAMAAUAAQARAAEAAAANAAQAAQARAAEAAAANAAUAAQAPAAEAAAAMAAYAAQAPAAEAAAAMAAcAAQARAAEAAAANAAYAAQARAAEAAAANAAcAAQAPAAEAAAAMAAgAAQANAAEAAAAMAAkAAQANAAEAAAANAAgAAQANAAEAAAANAAkAAQANAAEAAAAMAAoAAQAPAAAAAAAMAAsAAQAPAAAAAAANAAoAAQAPAAAAAAANAAsAAQAPAAAAAAAMAAwAAQAPAAAAAAAMAA0AAQAPAAAAAAANAAwAAQAPAAAAAAANAA0AAQAPAAAAAAAMAA4AAQAPAAAAAAAMAA8AAQAPAAAAAAANAA4AAQAPAAAAAAANAA8AAQAPAAAAAAAMABAAAQAPAAAAAAAMABEAAQAPAAAAAAANABAAAQAPAAAAAAANABEAAQAPAAAAAAAMABIAAQAPAAAAAAAMABMAAQAPAAAAAAANABIAAQAPAAAAAAANABMAAQAPAAAAAAAMABQAAQAPAAEAAAAMABUAAQARAAEAAAANABQAAQARAAEAAAANABUAAQAPAAEAAAAMABYAAQAPAAEAAAAMABcAAQARAAEAAAANABYAAQARAAEAAAANABcAAQAPAAEAAAAMABgAAQAKAAEAAAANABgAAQAKAAEAAAAOAAAAAQAMAAAAAAAOAAEAAQAMAAAAAAAPAAEAAQAMAAAAAAAOAAIAAQAMAAAAAAAOAAMAAQAKAAEAAAAPAAIAAQAMAAAAAAAPAAMAAQAKAAEAAAAOAAQAAQAPAAEAAAAOAAUAAQARAAEAAAAPAAQAAQARAAEAAAAPAAUAAQAPAAEAAAAOAAYAAQAPAAEAAAAOAAcAAQARAAEAAAAPAAYAAQARAAEAAAAPAAcAAQAPAAEAAAAOAAgAAQANAAEAAAAOAAkAAQANAAEAAAAPAAgAAQANAAEAAAAPAAkAAQANAAEAAAAOAAoAAQAPAAAAAAAOAAsAAQAPAAAAAAAPAAoAAQAPAAAAAAAPAAsAAQAPAAAAAAAOAAwAAQAPAAAAAAAOAA0AAQAPAAAAAAAPAAwAAQAPAAAAAAAPAA0AAQAPAAAAAAAOAA4AAQAPAAAAAAAOAA8AAQAPAAAAAAAPAA4AAQAPAAAAAAAPAA8AAQAPAAAAAAAOABAAAQAPAAAAAAAOABEAAQAPAAAAAAAPABAAAQAPAAAAAAAPABEAAQAPAAAAAAAOABIAAQAPAAAAAAAOABMAAQAPAAAAAAAPABIAAQAPAAAAAAAPABMAAQAPAAAAAAAOABQAAQAPAAEAAAAOABUAAQARAAEAAAAPABQAAQARAAEAAAAPABUAAQAPAAEAAAAOABYAAQAPAAEAAAAOABcAAQARAAEAAAAPABYAAQARAAEAAAAPABcAAQAPAAEAAAAOABgAAQAKAAEAAAAPABgAAQAKAAEAAAAQAAAAAQAMAAAAAAAQAAEAAQAMAAAAAAARAAEAAQAMAAAAAAAQAAIAAQAMAAAAAAAQAAMAAQAKAAEAAAARAAIAAQAMAAAAAAARAAMAAQAKAAEAAAAQAAQAAQAPAAEAAAAQAAUAAQARAAEAAAARAAQAAQARAAEAAAARAAUAAQAPAAEAAAAQAAYAAQAPAAEAAAAQAAcAAQARAAEAAAARAAYAAQARAAEAAAARAAcAAQAPAAEAAAAQAAgAAQAPAAEAAAAQAAkAAQARAAEAAAARAAgAAQARAAEAAAARAAkAAQAPAAEAAAAQAAoAAQAPAAEAAAAQAAsAAQARAAEAAAARAAoAAQARAAEAAAARAAsAAQAPAAEAAAAQAAwAAQAPAAEAAAAQAA0AAQARAAEAAAARAAwAAQARAAEAAAARAA0AAQAPAAEAAAAQAA4AAQAPAAEAAAAQAA8AAQARAAEAAAARAA4AAQARAAEAAAARAA8AAQAPAAEAAAAQABAAAQAPAAEAAAAQABEAAQARAAEAAAARABAAAQARAAEAAAARABEAAQAPAAEAAAAQABIAAQAPAAEAAAAQABMAAQARAAEAAAARABIAAQARAAEAAAARABMAAQAPAAEAAAAQABQAAQAPAAEAAAAQABUAAQARAAEAAAARABQAAQARAAEAAAARABUAAQAPAAEAAAAQABYAAQAPAAEAAAAQABcAAQARAAEAAAARABYAAQARAAEAAAARABcAAQAPAAEAAAAQABgAAQAKAAEAAAARABgAAQAKAAEAAAASAAAAAQAMAAAAAAASAAEAAQAMAAAAAAATAAEAAQAMAAAAAAASAAIAAQAMAAAAAAASAAMAAQAKAAEAAAATAAIAAQAMAAAAAAATAAMAAQAKAAEAAAASAAQAAQAPAAEAAAASAAUAAQARAAEAAAATAAQAAQARAAEAAAATAAUAAQAPAAEAAAASAAYAAQAPAAEAAAASAAcAAQARAAEAAAATAAYAAQARAAEAAAATAAcAAQAPAAEAAAASAAgAAQAPAAEAAAASAAkAAQARAAEAAAATAAgAAQARAAEAAAATAAkAAQAPAAEAAAASAAoAAQAPAAEAAAASAAsAAQARAAEAAAATAAoAAQARAAEAAAATAAsAAQAPAAEAAAASAAwAAQAPAAEAAAASAA0AAQARAAEAAAATAAwAAQARAAEAAAATAA0AAQAPAAEAAAASAA4AAQAPAAEAAAASAA8AAQARAAEAAAATAA4AAQARAAEAAAATAA8AAQAPAAEAAAASABAAAQAPAAEAAAASABEAAQARAAEAAAATABAAAQARAAEAAAATABEAAQAPAAEAAAASABIAAQAPAAEAAAASABMAAQARAAEAAAATABIAAQARAAEAAAATABMAAQAPAAEAAAASABQAAQAPAAEAAAASABUAAQARAAEAAAATABQAAQARAAEAAAATABUAAQAPAAEAAAASABYAAQAPAAEAAAASABcAAQARAAEAAAATABYAAQARAAEAAAATABcAAQAPAAEAAAASABgAAQAKAAEAAAATABgAAQAKAAEAAAAUAAAAAQAMAAAAAAAUAAEAAQAMAAAAAAAVAAEAAQAMAAAAAAAUAAIAAQAMAAAAAAAUAAMAAQAKAAEAAAAVAAIAAQAMAAAAAAAVAAMAAQAKAAEAAAAUAAQAAQAPAAEAAAAUAAUAAQARAAEAAAAVAAQAAQARAAEAAAAVAAUAAQAPAAEAAAAUAAYAAQAPAAEAAAAUAAcAAQARAAEAAAAVAAYAAQARAAEAAAAVAAcAAQAPAAEAAAAUAAgAAQAPAAEAAAAUAAkAAQARAAEAAAAVAAgAAQARAAEAAAAVAAkAAQAPAAEAAAAUAAoAAQAPAAEAAAAUAAsAAQARAAEAAAAVAAoAAQARAAEAAAAVAAsAAQAPAAEAAAAUAAwAAQAPAAEAAAAUAA0AAQARAAEAAAAVAAwAAQARAAEAAAAVAA0AAQAPAAEAAAAUAA4AAQAPAAEAAAAUAA8AAQARAAEAAAAVAA4AAQARAAEAAAAVAA8AAQAPAAEAAAAUABAAAQAPAAEAAAAUABEAAQARAAEAAAAVABAAAQARAAEAAAAVABEAAQAPAAEAAAAUABIAAQAPAAEAAAAUABMAAQARAAEAAAAVABIAAQARAAEAAAAVABMAAQAPAAEAAAAUABQAAQAPAAEAAAAUABUAAQARAAEAAAAVABQAAQARAAEAAAAVABUAAQAPAAEAAAAUABYAAQAPAAEAAAAUABcAAQARAAEAAAAVABYAAQARAAEAAAAVABcAAQAPAAEAAAAUABgAAQAKAAEAAAAVABgAAQAKAAEAAAAWAAAAAQAMAAAAAAAWAAEAAQAMAAAAAAAXAAEAAQAMAAAAAAAWAAIAAQAMAAAAAAAWAAMAAQAKAAEAAAAXAAIAAQAMAAAAAAAXAAMAAQAKAAEAAAAWAAQAAQAPAAEAAAAWAAUAAQARAAEAAAAXAAQAAQARAAEAAAAXAAUAAQAPAAEAAAAWAAYAAQAPAAEAAAAWAAcAAQARAAEAAAAXAAYAAQARAAEAAAAXAAcAAQAPAAEAAAAWAAgAAQAPAAEAAAAWAAkAAQARAAEAAAAXAAgAAQARAAEAAAAXAAkAAQAPAAEAAAAWAAoAAQAPAAEAAAAWAAsAAQARAAEAAAAXAAoAAQARAAEAAAAXAAsAAQAPAAEAAAAWAAwAAQAPAAEAAAAWAA0AAQARAAEAAAAXAAwAAQARAAEAAAAXAA0AAQAPAAEAAAAWAA4AAQAPAAEAAAAWAA8AAQARAAEAAAAXAA4AAQARAAEAAAAXAA8AAQAPAAEAAAAWABAAAQAPAAEAAAAWABEAAQARAAEAAAAXABAAAQARAAEAAAAXABEAAQAPAAEAAAAWABIAAQAPAAEAAAAWABMAAQARAAEAAAAXABIAAQARAAEAAAAXABMAAQAPAAEAAAAWABQAAQAPAAEAAAAWABUAAQARAAEAAAAXABQAAQARAAEAAAAXABUAAQAPAAEAAAAWABYAAQAPAAEAAAAWABcAAQARAAEAAAAXABYAAQARAAEAAAAXABcAAQAPAAEAAAAWABgAAQAKAAEAAAAXABgAAQAKAAEAAAAYAAAAAQAMAAAAAAAYAAEAAQAMAAAAAAAYAAIAAQAMAAAAAAAYAAMAAQAKAAEAAAAYAAQAAQAKAAEAAAAYAAUAAQAKAAEAAAAYAAYAAQAKAAEAAAAYAAcAAQAKAAEAAAAYAAgAAQAKAAEAAAAYAAkAAQAKAAEAAAAYAAoAAQAKAAEAAAAYAAsAAQAKAAEAAAAYAAwAAQAKAAEAAAAYAA0AAQAKAAEAAAAYAA4AAQAKAAEAAAAYAA8AAQAKAAEAAAAYABAAAQAKAAEAAAAYABEAAQAKAAEAAAAYABIAAQAKAAEAAAAYABMAAQAKAAEAAAAYABQAAQAKAAEAAAAYABUAAQAKAAEAAAAYABYAAQAKAAEAAAAYABcAAQAKAAEAAAAYABgAAQAKAAEAAAA=")
tile_set = SubResource("TileSet_ekutk")

[node name="ArrowLeft" type="Sprite2D" parent="."]
position = Vector2(310.157, 289.674)
scale = Vector2(0.663997, 0.345078)
texture = ExtResource("2_r5j28")

[node name="back" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 290.413
offset_top = 278.206
offset_right = 332.413
offset_bottom = 302.206
theme = SubResource("Theme_vrqjl")

[node name="game mode" type="Label" parent="."]
offset_left = 337.842
offset_top = 271.431
offset_right = 511.842
offset_bottom = 321.431
text = "Game Mode"
label_settings = SubResource("LabelSettings_3g8k5")

[node name="options" type="Node2D" parent="."]

[node name="speed" type="Label" parent="options"]
offset_left = 365.923
offset_top = 321.024
offset_right = 478.923
offset_bottom = 368.024
text = "Speed"
label_settings = SubResource("LabelSettings_xb34i")

[node name="speed1" type="Button" parent="options/speed"]
layout_mode = 0
offset_left = -69.4158
offset_top = 38.5327
offset_right = -4.41583
offset_bottom = 65.5327

[node name="speed2" type="Button" parent="options/speed"]
layout_mode = 0
offset_left = 1.17606
offset_top = 39.4755
offset_right = 66.1761
offset_bottom = 66.4755

[node name="speed3" type="Button" parent="options/speed"]
layout_mode = 0
offset_left = 70.9839
offset_top = 39.2001
offset_right = 135.984
offset_bottom = 66.2001

[node name="speed" type="Label" parent="options/speed"]
layout_mode = 0
offset_left = -71.9832
offset_top = 39.8131
offset_right = 119.017
offset_bottom = 62.8131
text = "  normal      fast         slow"

[node name="speed option" type="Sprite2D" parent="options/speed"]
modulate = Color(1, 1, 1, 0.486275)
position = Vector2(-36, 52)
scale = Vector2(3.53991, 1.42641)
texture = ExtResource("4_1c5yy")

[node name="fruits" type="Label" parent="options"]
offset_left = 369.753
offset_top = 390.942
offset_right = 431.753
offset_bottom = 424.942
text = "fruits"
label_settings = SubResource("LabelSettings_n1efm")

[node name="fruit1" type="Button" parent="options/fruits"]
layout_mode = 0
offset_left = -72.2776
offset_top = 36.187
offset_right = -7.27756
offset_bottom = 63.187

[node name="fruit2" type="Button" parent="options/fruits"]
layout_mode = 0
offset_left = -2.31781
offset_top = 36.3761
offset_right = 62.6822
offset_bottom = 63.3761

[node name="fruit3" type="Button" parent="options/fruits"]
layout_mode = 0
offset_left = 67.672
offset_top = 36.1491
offset_right = 132.672
offset_bottom = 63.1491

[node name="fruits option" type="Sprite2D" parent="options/fruits"]
modulate = Color(1, 1, 1, 0.486275)
position = Vector2(101, 49)
scale = Vector2(3.53991, 1.42641)
texture = ExtResource("4_1c5yy")

[node name="fruits number" type="Label" parent="options/fruits"]
layout_mode = 0
offset_left = -44.5012
offset_top = 32.378
offset_right = -4.50116
offset_bottom = 66.378
text = "5         3         9"
label_settings = SubResource("LabelSettings_kr8i3")

[node name="confirm" type="Label" parent="options"]
offset_left = 378.93
offset_top = 593.601
offset_right = 468.93
offset_bottom = 640.601
text = "Play"
label_settings = SubResource("LabelSettings_h3fib")

[node name="confirm" type="Button" parent="options/confirm"]
layout_mode = 0
offset_left = -26.7487
offset_top = 0.798279
offset_right = 75.2513
offset_bottom = 35.7983

[node name="modes" type="Label" parent="options"]
offset_left = 288.849
offset_top = 458.101
offset_right = 510.849
offset_bottom = 524.101
text = "            Modes"
label_settings = SubResource("LabelSettings_8y36d")

[node name="mode1" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 8.62653
offset_top = 40.028
offset_right = 73.6266
offset_bottom = 67.028

[node name="mode2" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 78.5863
offset_top = 40.2171
offset_right = 143.586
offset_bottom = 67.2171

[node name="mode3" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 148.576
offset_top = 39.9901
offset_right = 213.576
offset_bottom = 66.9901

[node name="mode4" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 8.62653
offset_top = 83.0281
offset_right = 73.6266
offset_bottom = 110.028

[node name="mode5" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 78.5863
offset_top = 83.2172
offset_right = 143.586
offset_bottom = 110.217

[node name="mode6" type="Button" parent="options/modes"]
layout_mode = 0
offset_left = 148.576
offset_top = 82.9901
offset_right = 213.576
offset_bottom = 109.99

[node name="mode" type="Sprite2D" parent="options/modes"]
modulate = Color(1, 1, 1, 0.486275)
position = Vector2(182, 53)
scale = Vector2(3.53991, 1.42641)
texture = ExtResource("4_1c5yy")

[node name="Label" type="Label" parent="options/modes"]
layout_mode = 0
offset_left = 9.71643
offset_top = 42.6503
offset_right = 215.716
offset_bottom = 120.65
text = "standard       wall        + Speed"
label_settings = SubResource("LabelSettings_dsk5g")

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="options/speed/speed1" to="." method="_on_speed_1_pressed"]
[connection signal="pressed" from="options/speed/speed2" to="." method="_on_speed_2_pressed"]
[connection signal="pressed" from="options/speed/speed3" to="." method="_on_speed_3_pressed"]
[connection signal="pressed" from="options/fruits/fruit1" to="." method="_on_fruit_1_pressed"]
[connection signal="pressed" from="options/fruits/fruit2" to="." method="_on_fruit_2_pressed"]
[connection signal="pressed" from="options/fruits/fruit3" to="." method="_on_fruit_3_pressed"]
[connection signal="pressed" from="options/confirm/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="options/modes/mode1" to="." method="_on_mode_1_pressed"]
[connection signal="pressed" from="options/modes/mode2" to="." method="_on_mode_2_pressed"]
[connection signal="pressed" from="options/modes/mode3" to="." method="_on_mode_3_pressed"]
